fix letter spacing and color on listing title

--- a/src/Listing.css
+++ b/src/Listing.css
@@ -7,6 +7,8 @@ p {
     width: 250px;
     text-align: center;
     margin-bottom: 25px;
+    letter-spacing: .62px;
+    color: #1A1A1A;
 }
 
 .Listing {
